# ur3e-basics

./: .gitignore  LICENSE  README.md
.docker/dockerfiles/: dockerfile-ur3e-basics
.docker/scripts/: docker-mount-run
scripts/: action_reference.pkl  calculate_real_goal_pose.py  calibrate.py  launch_robotiq_action_server.sh  launch_test_85mm_gripper.sh  launch_ur_driver_tool_use.sh  planning_constraints_demo.py  ur3e_robotiq_demo.py
src/dummy_package/: NOTES.txt
src/mit_perception/: CMakeLists.txt  package.xml  setup.py
src/mit_perception/include/mit_perception/: apriltag_utils.py  detect_T.py  env_T.py  inference_utils.py  move_utils.py  network.py  perception_utils.py  state_estimator_T.py  transform_utils.py
src/mit_perception/media/demo/: 0.pkl  1.pkl  10.pkl  11.pkl  12.pkl  13.pkl  2.pkl  3.pkl  4.pkl  5.pkl  6.pkl  7.pkl
src/mit_perception/scripts/: data_analyze.py  demo_pusht_keyboard.py  detect_T.py  detect_tag.py  detect_tag_pose.py  get_camera_image.py  inference.py
src/mit_robot/: CMakeLists.txt  package.xml
src/mit_robot/config/: ur3e_calibration.yaml
src/mit_robot/launch/: bringup_ur3e_robotiq.launch  load_ur3e_robotiq.launch
src/mit_robot/robot_description/xacro/: ur3e_robotiq.xacro  ur3e_robotiq_macro.xacro
src/ur3e_robotiq_moveit_config/: .setup_assistant  package.xml
src/ur3e_robotiq_moveit_config/config/: fake_controllers.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml  ur3e_robotiq.srdf
src/ur3e_robotiq_moveit_config/launch/: gazebo.launch  planning_context.launch  (+1 more)
