<?xml version="1.0"?>
<package format="2">
  <name>mit_robot</name>
  <version>0.0.0</version>
  <description>A package for launching robot drivers and storing robot descriptions</description>

  <maintainer email="jarkin@mit.edu">jarkin</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
</package>

